--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "firebase": "^7.21.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
